--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "homepage": "https://github.com/jonathonvanausdal9915/Team-Profile_Generator#readme",
     "devDependencies": {
-        "jest": "^28.1.3"
+        "jest": "^28.1.3",
+        "inquirer": "^6.3.1"
     }
 }
